<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/introImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/introHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_22ssp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color1"
        android:text="@string/first_heading"/>

    <TextView
        android:id="@+id/introParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:gravity="center"
        android:textColor="@color/color2"
        android:text="@string/lorem"/>

</LinearLayout>